# multi-agent-auto-insurance-ai

./: .env.example  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
agents/v1/: catastrophechecker.txt  claimdecider.txt  coverageevaluator.txt  documentvalidator.txt  driververifier.txt  frauddetector.txt  liabilityassessor.txt  policyvalidator.txt  rentalbenefitchecker.txt  vehicledamageevaluator.txt
agents/v2/: coverageevaluator.txt  documentvalidator.txt  driververifier.txt  frauddetector.txt  liabilityassessor.txt  policyvalidator.txt  rentalbenefitchecker.txt  vehicledamageevaluator.txt
api/: main.py
benchmarks/datasets/: manifest.json
benchmarks/datasets/expected/: consolidated_expected.jsonl
benchmarks/datasets/inputs/: consolidated_inputs.jsonl
benchmarks/datasets/raw/: auto_claim_sample_inputs.json  auto_claim_sample_inputs_450.json  eval_combo_claims_labeled.jsonl  eval_nl_claims_labeled.jsonl  insurance_dataset v1.csv
benchmarks/datasets/splits/: consolidated_test_expected.jsonl  consolidated_test_inputs.jsonl  consolidated_train_expected.jsonl  consolidated_train_inputs.jsonl  consolidated_val_expected.jsonl  consolidated_val_inputs.jsonl
benchmarks/scripts/: benchmark_runner.py  convert_to_csv.py  csv_dataset_processor.py  dataset_processor.py  quick_benchmark.py  quick_test.py
docs/: BENCHMARKING.md  MULTI_LLM_SETUP.md  SETUP.md
scripts/: demo_react.py  prompt_manager.py  setup_providers.py
src/: __init__.py  config.py  llm_factory.py  models.py  prompt_loader.py  py.typed  tools.py  workflow.py
src/agents/: __init__.py  base.py
src/agents/catastrophe_checker/: __init__.py  agent.py  prompt.md
src/agents/claim_decider/: __init__.py  agent.py  prompt.md
src/agents/coverage_evaluator/: __init__.py  agent.py  prompt.md
src/agents/document_validator/: __init__.py  agent.py  prompt.md
src/agents/driver_verifier/: __init__.py  agent.py  prompt.md
src/agents/fraud_detector/: __init__.py  agent.py  prompt.md
src/agents/liability_assessor/: __init__.py  agent.py  prompt.md
src/agents/policy_validator/: __init__.py  agent.py  prompt.md
src/agents/rental_benefit_checker/: __init__.py  agent.py  prompt.md
src/agents/vehicle_damage_evaluator/: __init__.py  agent.py  prompt.md
tests/: test_react_agents.py  test_system.py
